@@ -19,9 +19,11 @@ Dependencies and runlevels</a>
 <p>
 <a href="runit.8.html">The <tt>runit</tt> program</a><br>
 <a href="runit-init.8.html">The <tt>runit-init</tt> program</a><br>
+<a href="runsvdir.8.html">The <tt>runsvdir</tt> program</a><br>
+<a href="runsv.8.html">The <tt>runsv</tt> program</a><br>
+<a href="utmpset.8.html">The <tt>utmpset</tt> program</a><br>
 <a href="svwaitdown.8.html">The <tt>svwaitdown</tt> program</a><br>
-<a href="svwaitup.8.html">The <tt>svwaitup</tt> program</a><br>
-<a href="utmpset.8.html">The <tt>utmpset</tt> program</a>
+<a href="svwaitup.8.html">The <tt>svwaitup</tt> program</a>
 <hr>
 <i>runit</i> cooperates with the
 <a href="http://cr.yp.to/daemontools.html">daemontools</a> package to create
@@ -61,7 +63,7 @@ if this is started by the kernel.
   <i>runit</i> starts <tt>/etc/runit/2</tt> which should not return
   until the system is going to halt or reboot, if it crashes, it will be
   restarted. Normally, <tt>/etc/runit/2</tt> runs
-  <a href="http://cr.yp.to/daemontools/svscanboot.html">svscanboot</a>.
+  <a href="runsvdir.8.html">runsvdir</a>.
   In Stage 2 <i>runit</i> optionally handles an INT signal
   (ctrl-alt-del keyboard request on Linux/i386).
   <li><b>Stage 3:</b><br>
