@@ -50,7 +50,8 @@ The maximum is 100. <P>
 <B>svwaitup</B> returns 111 on error. 
 <H2><A NAME="sect5">See Also</A></H2>
 <I>svwaitdown(8)</I>,
-<I>supervise(8)</I>, <I>svscan(8)</I>, <I>runit(8)</I>, <I>runit-init(8)</I> <P>
+<I>runit(8)</I>, <I>runit-init(8)</I>, <I>runsvdir(8)</I>, <I>runsv(8)</I>, <I>supervise(8)</I>, <I>svscan(8)</I>
+<P>
  <I>http://smarden.org/runit/</I><BR>
   <I>http://cr.yp.to/daemontools.html</I><BR>
  
